--- a/PralineNetworkSDK/PralineNetworkSDK.csproj
+++ b/PralineNetworkSDK/PralineNetworkSDK.csproj
@@ -27,11 +27,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseDebug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <OutputPath>bin\Release-Debug\</OutputPath>
+    <OutputPath>bin\ReleaseDebug\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
