--- a/PralineServer/PralineServer.csproj
+++ b/PralineServer/PralineServer.csproj
@@ -25,10 +25,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseDebug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>pdbonly</DebugType>
-    <OutputPath>bin\Release-Debug\</OutputPath>
+    <OutputPath>bin\ReleaseDebug\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
