--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,9 +19,7 @@ deploy:
   - provider: GitHub
     auth_token:
       secure: dXgty1lPk4rS5pmgesMKZv21vfkjLjnHIwzPULPPaqJTGNqpqiDAasrN5OC8P3SH
-    artifact:
-      - PralineNetworkSDK
-      - PralineServer
+    artifact: Deployment/*.zip
     force_update: true
     on:
       appveyor_repo_tag: true
