Add Logger on PralineNetworkSDK + add command line on the server + Fix some bugs when the player switch between the Room and the Menu (ID didn't keep) + fix bug when the player took an item

--- a/PralineNetworkSDK/PralineNetworkSDK.csproj
+++ b/PralineNetworkSDK/PralineNetworkSDK.csproj
@@ -68,6 +68,7 @@
     <Compile Include="LiteNetLib\Utils\NetPacketProcessor.cs" />
     <Compile Include="LiteNetLib\Utils\NetSerializer.cs" />
     <Compile Include="LiteNetLib\Utils\NetSerializerExceptions.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="MessageTypes.cs" />
     <Compile Include="NetworkMessage.cs" />
     <Compile Include="NetworkWriter.cs" />
